--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/perlaballesteros/FriendFinder#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "compute-min": "^1.0.1",
     "express": "^4.16.2",
     "path": "^0.12.7"
   }
